fix spacing between mobile tooltip

--- a/css/election.css
+++ b/css/election.css
@@ -368,7 +368,7 @@
   .tooltip-mobile {
     position: absolute;
     top: -55px;
-    left: 125px;
+    left: 140px;
     transform: scale(0.65);
     text-align: left;
     display: block;
